plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.mpruy.gor-gemilangcondet'
version = '0.0.1-SNAPSHOT'
description = 'Sistem informasi GOR Gemilang Condet adalah sistem informasi terintegrasi milik CV Sumber Anugerah Ilahi yang bertujuan untuk digitasi operasional GOR Gemilang Condet guna mengatasi kendala pencatatan manual pada buku tabel dan meminimalisir risiko double booking. Fokus utama sistem ini adalah otomasi manajemen jadwal lapangan supaya dapat diakses secara transparan oleh pelanggan dan staf, serta mengintegrasikan administrasi kantin dan toko olahraga dalam satu platform reservasi. Melalui fitur pelacakan stok barang dan rekapitulasi pendapatan harian yang otomatis, sistem ini dirancang untuk meningkatkan akurasi data keuangan dan memfasilitasi pengambilan keputusan strategis bagi pemilik melalui dasbor tren pendapatan serta analisis preferensi produk pelanggan.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-restclient'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
